@startuml

title __ACTIVITIES's Class Diagram__\n

  namespace com.example.androidproject {
    namespace activities {
      class com.example.androidproject.activities.AddTobaccoActivity {
          - df : DecimalFormat
          - dfs : DecimalFormatSymbols
          - maxiPack : int
          - regularPack : int
          + onClick()
          # onCreate()
      }
    }
  }
  

  namespace com.example.androidproject {
    namespace activities {
      class com.example.androidproject.activities.AlcoholActivity {
          + onClick()
          # onCreate()
      }
    }
  }
  

  namespace com.example.androidproject {
    namespace activities {
      class com.example.androidproject.activities.GenderChooseActivity {
          + buttonClick()
          # onCreate()
      }
    }
  }
  

  namespace com.example.androidproject {
    namespace activities {
      class com.example.androidproject.activities.MainActivity {
          {static} + EXTRA : String
          {static} + PREFS_NAME : String
          {static} + btnType : String
          + btnClick()
          # onCreate()
          # onDestroy()
          # onPause()
          # onStop()
          - getViceList()
          - updateUI()
      }
    }
  }
  

  namespace com.example.androidproject {
    namespace activities {
      class com.example.androidproject.activities.MovementActivity {
          - df : DecimalFormat
          - dynData : float[]
          - xAcc : TextView
          - xRot : TextView
          - yAcc : TextView
          - yRot : TextView
          - zAcc : TextView
          - zRot : TextView
          + onTrackBtnClick()
          + updateDynamicUI()
          + updateUI()
          # onCreate()
          # onDestroy()
          - createChart()
      }
    }
  }
  

  namespace com.example.androidproject {
    namespace activities {
      class com.example.androidproject.activities.MyApplication {
          {static} - context : Context
          {static} + getAppContext()
          + onCreate()
      }
    }
  }
  

  namespace com.example.androidproject {
    namespace activities {
      class com.example.androidproject.activities.RisksActivity {
          + buttonsClicked()
          + getRisks()
          # onCreate()
      }
    }
  }
  

  namespace com.example.androidproject {
    namespace activities {
      class com.example.androidproject.activities.StatisticsActivity {
          # onCreate()
          - createChart()
          - updateUI()
      }
    }
  }
  

  com.example.androidproject.activities.AddTobaccoActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidproject.activities.AddTobaccoActivity o-- com.example.androidproject.dataclasses.Tobacco : tobacco
  com.example.androidproject.activities.AlcoholActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidproject.activities.AlcoholActivity o-- com.example.androidproject.dataclasses.Alcohol : alcohol
  com.example.androidproject.activities.GenderChooseActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidproject.activities.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidproject.activities.MovementActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidproject.activities.MovementActivity o-- com.example.androidproject.dataclasses.TrackMovement : movTrack
  com.example.androidproject.activities.MyApplication -up-|> android.app.Application
  com.example.androidproject.activities.RisksActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidproject.activities.StatisticsActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
